--- a/tracker/templates/tracker/createproject.html
+++ b/tracker/templates/tracker/createproject.html
@@ -163,42 +163,36 @@
     <div class="container-fluid">
       <div class="row">
 
+
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-          </ul>
+          <ul class="nav nav-sidebar"></ul>
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <div class="page-header">
-        <h1>Project List</h1>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            {% if isManager %}
-            <!-- Manager can create project -->
-            <div class="list-group" style="border-style: dashed; text-align: center; color = blue;">
-              {% if user %}
-              <a href="/tracker/{{ user.pk }}/createproject" class="list-group-item">
-                {% endif %}
-                <h3 class="list-group-item-heading">Create New Project</h4>
-                <h1>+</h1>
-              </a>
-            </div>
-            {% endif %}
+          <div class="page-header"><h1>Create A Project</h1></div>
+
+          <div class="container">
+            <form class="form-horizontal" role="form" method="post" action=".">{% csrf_token %}
+              {{ form.as_p }}
 
 
-            {% for project in project_list %}
-            <div class="list-group">
-              <a href="/tracker/{{ project.manager.uid }}/project/{{ project.pid }}" class="list-group-item">
-                <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
-                <p class="list-group-item-text">{{ project.description }}</p>
-                <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.name }}</b></p>
-              </a>
-            </div>
-            {% endfor %}
+              <div class="fieldWrapper">
+                  {{ form.subject.errors }}
+                  {{ form.subject.label_tag }}
+                  {{ form.subject }}
+              </div>
+
+              <div class="form-group">        
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </div>
+              </div>
+
+            </form>
           </div>
+
         </div>
-        </div>
+
 
       </div>
     </div>
