--- a/tracker/templates/tracker/createproject.html
+++ b/tracker/templates/tracker/createproject.html
@@ -143,16 +143,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          {% if user %}
+          <a class="navbar-brand" href="/tracker/{{ user.uid }}/home">Home</a>
+          {% else %}
           <a class="navbar-brand" href="#">Home</a>
+          {% endif %}
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
-            
-          {% if user %}  
-          <li><a href="/tracker/{{ user.pk }}/home">{{ user.name }}</a></li>
-          {% endif %}
-            
+          <ul class="nav navbar-nav navbar-right">                    
+            {% if user %}  
+            <li><a href="/tracker/{{ user.uid }}/home">{{ user.name }}</a></li>
+            {% endif %}            
             <li><a href="#">Logout</a></li>
           </ul>
         </div>
@@ -172,16 +173,9 @@
           <div class="page-header"><h1>Create A Project</h1></div>
 
           <div class="container">
-            <form class="form-horizontal" role="form" method="post" action=".">{% csrf_token %}
+            <form class="form-horizontal" role="form" method="post" action=".">
+              {% csrf_token %}
               {{ form.as_p }}
-
-
-              <div class="fieldWrapper">
-                  {{ form.subject.errors }}
-                  {{ form.subject.label_tag }}
-                  {{ form.subject }}
-              </div>
-
               <div class="form-group">        
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-default">Submit</button>
