--- a/tracker/templates/tracker/summary.html
+++ b/tracker/templates/tracker/summary.html
@@ -160,8 +160,8 @@
           <ul class="nav nav-sidebar">
             {% if project %}
             <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk}}">UP</a></li>
+            <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk }}/people">People</a></li>
             {% endif %}
-            <li><a href="#">People</a></li>
             <li class="active"><a href="#">Summary</a></li>
           </ul>
 
