--- a/tracker/templates/tracker/people.html
+++ b/tracker/templates/tracker/people.html
@@ -168,40 +168,27 @@
           </ul>
         </div>
 
-
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="col-md-6">
+          <h1 class="page-header">Developer List</h1>
           <table class="table table-striped">
             <thead>
               <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>ID</th>
+                <th>Name</th>
               </tr>
             </thead>
             <tbody>
+              {% for developer in developer_list %}
               <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>{{ developer.pk }}</td>
+                <td>{{ developer.name }}</td>
               </tr>
-              <tr>
-                <td>2</td>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
+              {% endfor %}
             </tbody>
           </table>
         </div>
-
+      </div>
 
 
         </div>
