--- a/tracker/templates/tracker/summary.html
+++ b/tracker/templates/tracker/summary.html
@@ -169,10 +169,13 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Project Summary</h1>
 
-          <h2 class="sub-header"> >>> Metrics 1</h2>
+          <!-- Metrics 1 -->
+
+          <h2 class="sub-header">Metrics 1</h2>
           <div class="table-responsive">
             <h3>Iteration</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+              <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Iteration Name</th>
@@ -199,7 +202,8 @@
 
           <div class="table-responsive">
             <h3>Phase</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+            <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Phase</th>
@@ -224,7 +228,8 @@
 
           <div class="table-responsive">
             <h3>Project</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+            <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>SLOC</th>
@@ -249,10 +254,11 @@
 
         </br></br><hr>
         <!-- ======= Metrics 2 ======= -->
-        <h2 class="sub-header"> >>> Metrics 2</h2>
+        <h2 class="sub-header">Metrics 2</h2>
           <div class="table-responsive">
             <h3>Iteration</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+            <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Iteration Name</th>
@@ -261,7 +267,7 @@
                   <th>Defects Removed</th>
                   <th>Injection Rate (per person-hour)</th>
                   <th>Removal Rate (per person-hour)</th>
-                  <th>Defect Density (per KSLOC)<th>
+                  <th>Defect Density (per KSLOC)</th>
                   <th>Yield</th>
                 </tr>
               </thead>
@@ -285,7 +291,8 @@
 
           <div class="table-responsive">
             <h3>Phase</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+            <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Phase</th>
@@ -293,7 +300,7 @@
                   <th>Defects Removed</th>
                   <th>Injection Rate (per person-hour)</th>
                   <th>Removal Rate (per person-hour)</th>
-                  <th>Defect Density (per KSLOC)<th>
+                  <th>Defect Density (per KSLOC)</th>
                   <th>Yield</th>
                 </tr>
               </thead>
@@ -316,14 +323,15 @@
 
           <div class="table-responsive">
             <h3>Project</h3>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped"> -->
+            <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>Defects Injected</th>
                   <th>Defects Removed</th>
                   <th>Injection Rate (per person-hour)</th>
                   <th>Removal Rate (per person-hour)</th>
-                  <th>Defect Density (per KSLOC)<th>
+                  <th>Defect Density (per KSLOC)</th>
                   <th>Yield</th>
                 </tr>
               </thead>
