set timer to current time

--- a/tracker/templates/tracker/timing.html
+++ b/tracker/templates/tracker/timing.html
@@ -70,7 +70,8 @@
     }
 
     function load() {
-    	t[5]=new Date(1970, 1, 1, 0, 0, 0, 0).valueOf();
+        t[5] = new Date().valueOf();
+    	// t[5]=new Date(1970, 1, 1, 0, 0, 0, 0).valueOf();
     	t[6]=document.getElementById('disp');
 
     	disp();
