--- a/tracker/templates/tracker/summary.html
+++ b/tracker/templates/tracker/summary.html
@@ -170,11 +170,13 @@
           <h1 class="page-header">Project Summary</h1>
 
           <!-- Metrics 1 -->
+          <div class="panel-group">
+            <div class="panel panel-info">
+              <div class="panel-heading"><h2>Metrics 1</h2></div>
+              <div class="panel-body">
 
-          <h2 class="sub-header">Metrics 1</h2>
           <div class="table-responsive">
             <h3>Iteration</h3>
-            <!-- <table class="table table-striped"> -->
               <table class="table table-bordered">
               <thead>
                 <tr>
@@ -202,7 +204,6 @@
 
           <div class="table-responsive">
             <h3>Phase</h3>
-            <!-- <table class="table table-striped"> -->
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -252,9 +253,16 @@
           </div>
 
 
-        </br></br><hr>
+        
+
+        </div>
+        </div>
         <!-- ======= Metrics 2 ======= -->
-        <h2 class="sub-header">Metrics 2</h2>
+        <div class="panel-group">
+            <div class="panel panel-success">
+              <div class="panel-heading"><h2>Metrics 2</h2></div>
+              <div class="panel-body">
+              
           <div class="table-responsive">
             <h3>Iteration</h3>
             <!-- <table class="table table-striped"> -->
@@ -354,6 +362,8 @@
 
         </div>
       </div>
+    </div>
+    </div>
     </div>
 
     <!-- Bootstrap core JavaScript
