--- a/tracker/templates/tracker/timing.html
+++ b/tracker/templates/tracker/timing.html
@@ -174,7 +174,8 @@ document.documentElement.firstChild.appendChild(ga);
                       <p>Are you sure to logout without submitting time record?</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                      <button type="button" class="btn btn-danger" data-dismiss="modal">Close anyway</button>
                     </div>
                   </div>
 
