--- a/tracker/templates/tracker/summary.html
+++ b/tracker/templates/tracker/summary.html
@@ -159,8 +159,8 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             {% if project %}
-            <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk}}">UP</a></li>
-            <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk }}/people">People</a></li>
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk}}">UP</a></li>
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/people">People</a></li>
             {% endif %}
             <li class="active"><a href="#">Summary</a></li>
           </ul>
