--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -148,7 +148,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">            
           {% if user %}  
-          <li><a href="/tracker/{{ user.pk }}/home">{{ user.name }}</a></li>
+          <li><a href="/tracker/{{ user.account.pk }}/home">{{ user.account.username }}</a></li>
           {% endif %}
             
             <li><a href="#">Logout</a></li>
@@ -173,27 +173,38 @@
         <div class="row">
           <div class="col-sm-4">
             {% if isManager %}
-            <!-- Manager can create project -->
-            <div class="list-group" style="border-style: dashed; text-align: center; color = blue;">
-              {% if user %}
-              <a href="/tracker/{{ user.pk }}/createproject" class="list-group-item">
-                {% endif %}
-                <h3 class="list-group-item-heading">Create New Project</h4>
-                <h1>+</h1>
-              </a>
-            </div>
+                <!-- Manager can create project and view project details-->
+                <div class="list-group" style="border-style: dashed; text-align: center; color = blue;">
+                    {% if user %}
+                      <a href="/tracker/{{ user.account.pk }}/createproject" class="list-group-item">
+                    {% endif %}
+                    <h3 class="list-group-item-heading">Create New Project</h4>
+                    <h1>+</h1>
+                  </a>
+                </div>
+
+                {% for project in project_list %}
+                <div class="list-group">
+                  <a href="/tracker/{{ user.account.pk }}/project/{{ project.pid }}" class="list-group-item">
+                    <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
+                    <p class="list-group-item-text">{{ project.description }}</p>
+                    <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.account.username }}</b></p>
+                  </a>
+                </div>
+                {% endfor %}
+            {% else %}
+            <!-- Developer can choose a project to work on-->
+                {% for project in project_list %}
+                <div class="list-group">
+                  <a href="/tracker/{{ user.account.pk }}/project/{{ project.pid }}/timing" class="list-group-item">
+                    <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
+                    <p class="list-group-item-text">{{ project.description }}</p>
+                    <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.account.username }}</b></p>
+                  </a>
+                </div>
+                {% endfor %}
+
             {% endif %}
-
-
-            {% for project in project_list %}
-            <div class="list-group">
-              <a href="/tracker/{{ project.manager.uid }}/project/{{ project.pid }}" class="list-group-item">
-                <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
-                <p class="list-group-item-text">{{ project.description }}</p>
-                <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.name }}</b></p>
-              </a>
-            </div>
-            {% endfor %}
           </div>
         </div>
         </div>
