--- a/tracker/templates/tracker/project_index.html
+++ b/tracker/templates/tracker/project_index.html
@@ -171,8 +171,8 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">UP</a></li>
             {% if project %}
-            <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk }}/people">People</a></li>
-            <li><a href="/tracker/{{ project.manager.pk }}/project/{{ project.pk }}/summary">Summary</a></li>
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/people">People</a></li>
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/summary">Summary</a></li>
             {% endif %}
           </ul>
         </div>
