--- a/tracker/templates/tracker/project_index.html
+++ b/tracker/templates/tracker/project_index.html
@@ -154,8 +154,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">            
             {% if user %}  
-            <li><a href="/tracker/{{ user.pk }}/home">Home</a></li>
-            <li><a href="#">{{ user.name }}</a></li>
+            <li><a href="/tracker/manager/{{ user.account.pk }}/home">Home</a></li>
+            <li><a href="#">{{ user.account.username }}</a></li>
             {% endif %}
             <li><a href="#">Logout</a></li>
           </ul>
