--- a/tracker/templates/tracker/project_work.html
+++ b/tracker/templates/tracker/project_work.html
@@ -16,6 +16,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
       <!-- Custom styles for this template -->
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'dashboard.css' %}" />
@@ -143,18 +147,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Home</a>
+          {% if project %}
+          <a class="navbar-brand" href="#">{{ project.name }}</a>
+          {% endif %}
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">            
-          {% if user %}  
-            {% if isManager %}
-              <li><a href="/tracker/manager/{{ user.account.pk }}/home">{{ user.account.username }}</a></li>
-            {% else %}
-              <li><a href="/tracker/developer/{{ user.account.pk }}/home">{{ user.account.username }}</a></li>
+            {% if user %}  
+            <li><a href="/tracker/manager/{{ user.account.pk }}/home">Home</a></li>
+            <li><a href="#">{{ user.account.username }}</a></li>
             {% endif %}
-          {% endif %}
-            
             <li><a href="#">Logout</a></li>
           </ul>
         </div>
@@ -167,48 +169,87 @@
 
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
+            <li class="active"><a href="#">UP</a></li>
+            {% if project %}
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/people">People</a></li>
+            <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/summary">Summary</a></li>
+            {% endif %}
           </ul>
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <div class="page-header">
-        <h1>Project List</h1>
-        </div>
         <div class="row">
           <div class="col-sm-4">
-            {% if isManager %}
-                <!-- Manager can create project and view project details-->
-                <div class="list-group" style="border-style: dashed; text-align: center; color = blue;">
-                    {% if user %}
-                      <a href="/tracker/{{ user.account.pk }}/createproject" class="list-group-item">
-                    {% endif %}
-                    <h3 class="list-group-item-heading">Create New Project</h4>
-                    <h1>+</h1>
-                  </a>
-                </div>
 
-                {% for project in project_list %}
-                <div class="list-group">
-                  <a href="/tracker/{{ user.account.pk }}/project/{{ project.pid }}" class="list-group-item">
-                    <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
-                    <p class="list-group-item-text">{{ project.description }}</p>
-                    <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.account.username }}</b></p>
-                  </a>
-                </div>
-                {% endfor %}
-            {% else %}
-            <!-- Developer can choose a project to work on-->
-                {% for project in project_list %}
-                <div class="list-group">
-                  <a href="/tracker/{{ user.account.pk }}/workonproject/{{ project.pid }}" class="list-group-item">
-                    <h3 class="list-group-item-heading">{{ project.name }}</h3></br>
-                    <p class="list-group-item-text">{{ project.description }}</p>
-                    <p class="list-group-item-text" ><b>Project Manager: {{ project.manager.account.username }}</b></p>
-                  </a>
-                </div>
-                {% endfor %}
+            
 
-            {% endif %}
+
+            <div class="container">
+              <!-- Trigger the modal with a button -->
+              {% if active_iteration %}
+              <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#myModal">Close Current Iteration</button>
+              {% elif is_opened_iteration %}
+              <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Start Iteration</button>
+              {% endif %}
+              <!-- Modal -->
+              <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog modal-sm">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h3 class="modal-title">Warning!</h3>
+                    </div>
+                    <div class="modal-body">
+                      <p>Do you really want to close current iteration?</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                      <form
+                      <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeIteration()">Yes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+
+
+
+            <form class="form-horizontal" role="form" method="post" action=".">
+              {% csrf_token %}
+              {{ it_form.as_p }}
+              <div class="form-group">        
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </div>
+              </div>
+            </form>
+
+
+
+
+            <h2>Phase List</h2>
+            {% for phase in phase_list %}
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <h3 class="list-group-item-heading">{{ phase }}</h3></br>
+              </a>
+            </div>
+            {% endfor %}
+
+            <hr>
+            <h2>Iteration List</h2>
+            {% for iteration in iteration_list %}
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <h3 class="list-group-item-heading">{{ iteration.pk }}. {{ iteration.name }}</h3>
+                <p class="list-group-item-text">Phase: {{ iteration.phase }}</p>
+                <p class="list-group-item-text">Status: {{ iteration.status }}</p>
+              </a>
+            </div>
+            {% endfor %}
+
           </div>
         </div>
         </div>
@@ -227,5 +268,12 @@
     <!--<script src="{% static 'assets/js/vendor/holder.min.js' %}"></script>-->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<script src="{% static 'assets/js/ie10-viewport-bug-workaround.js' %}"></script>-->
+    <script type="text/javascript">
+    function closeIteration() {
+        document.getElementById("close_iteration").innerHTML = "Hello World";
+
+
+    }
+    </script>
   </body>
 </html>
