--- a/tracker/templates/tracker/project_work.html
+++ b/tracker/templates/tracker/project_work.html
@@ -169,7 +169,7 @@
 
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">UP</a></li>
+            <li class="active"><a href="#">Report a Defect</a></li>
             {% if project %}
             <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/people">People</a></li>
             <li><a href="/tracker/{{ project.manager.account.pk }}/project/{{ project.pk }}/summary">Summary</a></li>
